# demo-archive

./: README.md
H/: .dir-locals.el  CMakeLists.txt  H.nfo  Makefile  Makefile.bak
H/assets/: H.project  SandBox.project  shots.json
H/assets/shaders/: bubbleParticle.fs  cubeMapTest.fs  cubeMapTest.vs  distantSeaSurface.fs  gerstnerWave.vs  ibl.fs  ibl.vs  lightFunctions.fs  lightSource.fs  lightSource.vs  lightWave.fs  myCube.fs  myCube.vs  myFloor.fs  parallaxMappingFunctions.fs  particle.fs  particle.vs  particleNormalsWithDepth.fs  particleWithDepth.fs  pbr.fs  pbr.vs  pbrWithEmissive.fs  pbrWithIncandescentOrichalcum.fs  pbrWithShadows.fs  randFunctions.fs  researchVesselHull.fs  researchVesselHull.vs  researchVesselHullShadowMap.fs  seaSurface.vs  seaSurfaceFoam.fs  seaSurface_boatScene.fs  seaSurface_emergenceScene.fs  seaweed.fs  seaweed.vs  shadowMap.fs  simpleShader.fs  simpleShader.vs  simpleShaderInstancing.vs  skyBox.fs  skyBox.vs  (+8 more)
H/assets/shaders/compute/: attractor.fs  fountain.fs  seaParticles.fs  splashBubbles.fs
H/assets/shaders/debug/: backFacesView.fs  debugFunctions.fs  minimalTransformShader.vs  showDepth.fs  showTexCoord.fs  singleColorShader.fs  textureOnlyShader.fs  unlitWhiteShader.fs  whiteDiffuseShader.fs
H/assets/shaders/screenspace/: antialiasPass.fs  bilateralGaussianBlurPass.fs  blitShader.fs  blitShader.vs  blurFunctions.fs  deferredWater.fs  deferredWaterWithShadows.fs  finalCombinePass.fs  fxaa.fs  fxaa_size_optimized.fs  gaussianBlurPass.fs  simpleProgressBar.fs  sky.fs  streakBlurPass.fs  toneMappingPass.fs  volumetricLighting.fs
H/assets/soundtrack/: Atlantis.64k2Patch  Atlantis_V9_20170629 Final.cpr
H/project/VS2012/: Ctrl-Alt-Test.sln  Engine.vcxproj  Engine.vcxproj.filters  GraphicLayer.vcxproj  GraphicLayer.vcxproj.filters  H.vcxproj  H.vcxproj.filters  MeshPlayground.vcxproj  MeshPlayground.vcxproj.filters  UnitTest++.vcxproj  UnitTest++.vcxproj.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters  allCommon.props  debugCommon.props  debugReleaseCommon.props  releaseCommon.props
H/src/H/: BoatScene.cpp  BoatScene.hh  CityScene.cpp  CityScene.hh  DescentScene.cpp  DescentScene.hh  EmergenceScene.cpp  EmergenceScene.hh  H.cpp  H.hh  InsideTempleScene.cpp  InsideTempleScene.hh  LoadingBar.cpp  LoadingBar.hh  RuinsScene.cpp  RuinsScene.hh  TheCity.cpp  TheCity.hh  TheSubmersible.cpp  TheSubmersible.hh  ViaductScene.cpp  ViaductScene.hh  main.cpp
H/src/engine/algebra/: AABB3.hh  AABB3.hxx  Functions.cpp  Functions.hh  Interpolation.hh  Interpolation.hxx  Matrix.cpp  Matrix.hh  Matrix.hxx  Plane.hh  Plane.hxx  Quaternion.cpp  Quaternion.hh  Quaternion.hxx  Ray.hh  Ray.hxx  Spline.cc  Spline.hh  Utils.hh  Vector2.hh  Vector2.hxx  Vector3.cpp  Vector3.hh  Vector3.hxx  Vector4.hh  Vector4.hxx
H/src/engine/container/: Algorithm.hh  Algorithm.hxx  Array.hh  Array.hxx  Dict.hh  Dict.hxx  HashTable.hh  HashTable.hxx  Queue.hh  Queue.hxx  Utils.hh  test.cc
H/src/engine/core/: Camera.cpp  Camera.hh  Camera.hxx  Debug.cpp  Debug.hh  FileIO.cpp  FileIO.hh  Light.hh  Log.cpp  Log.hh  Node.cpp  Node.hh  RigidTransform.cpp  RigidTransform.hh  RigidTransform.hxx  Settings.cpp  Settings.hh  StringUtils.cpp  StringUtils.hh  msys_temp.cpp  msys_temp.hh
H/src/engine/mesh/: Cube.cpp  (+17 more)
H/src/gfx/: BlendingMode.hh  DrawArea.hh  Geometry.hh  Helpers.cpp  IGraphicLayer.cpp  IGraphicLayer.hh  IGraphicLayerImplementations.hh  PolygonMode.hh  RasterTests.hh  ResourceID.cpp  ResourceID.hh  ShadingParameters.cpp  ShadingParameters.hh  TextureFormat.hh  Uniform.hh  Uniform.hxx  VertexAttribute.hh
H/src/meshes/: Artemision.cpp  Artemision.hh  CityFloor.cpp  CityFloor.hh  Dolphin.cpp  Dolphin.hh  ElderManStatue.cpp  ElderManStatue.hh  Fence.cpp  Fence.hh  Fountain.cpp  Fountain.hh  Gate.cpp  Gate.hh  GreekColumn.cpp  GreekColumn.hh  Houses.cpp  Houses.hh  Lightning.cpp  Lightning.hh  MyCube.cpp  MyCube.hh  Obelisk.cpp  Obelisk.hh  Parthenon.cpp  Parthenon.hh  Plant.cpp  Plant.hh  PlaygroundMesh.cpp  PlaygroundMesh.hh  PoseidonSeated.cpp  PoseidonSeated.hh  ResearchVessel.cpp  ResearchVessel.hh  Road.cpp  Road.hh  Rocks.cpp  Rocks.hh  RuinsFloor.cpp  RuinsFloor.hh  (+22 more)
H/src/meshplayground/: OrbitCameraControls.cpp  OrbitCameraControls.hh  main.cpp
H/src/platform/: IPlatform.hh  KeyCodes.hh  Platform.hh  Win32Dialog.cpp  Win32Dialog.hh  Win32Font.cpp  Win32Font.hh  Win32Platform.cpp  Win32Platform.hh  XLibPlatform.cpp  XLibPlatform.hh
H/src/postprocessing/: BilateralGaussianBlur.cpp  BilateralGaussianBlur.hh  CommonPostProcessing.cpp  CommonPostProcessing.hh  FXAA.cpp  FXAA.hh  FinalCombine.cpp  FinalCombine.hh  GaussianBlur.cpp  GaussianBlur.hh  StreakBlur.cpp  StreakBlur.hh  ToneMapping.cpp  ToneMapping.hh
H/src/textures/: Cobbles.cpp  Cobbles.hh  DebugTextures.cpp  DebugTextures.hh  GreekColumn.cpp  GreekColumn.hh  GreekTiles.cpp  GreekTiles.hh  Ground.cpp  Ground.hh  Marble.cpp  Marble.hh  MaterialStudy.cpp  MaterialStudy.hh  Mosaic.cpp  Mosaic.hh  NoiseTextures.cpp  NoiseTextures.hh  OldStone.cpp  OldStone.hh  RCCTest.cpp  RCCTest.hh  RandomTexture.cpp  RandomTexture.hh  ResearchVessel.cpp  ResearchVessel.hh  SeaFoam.cpp  SeaFoam.hh
H/src/tool/: CameraLoader.cpp  CameraLoader.hh  CommonMaterial.cpp  CommonMaterial.hh  DebugControls.cpp  DebugControls.hh  DebugGraphicLayer.cpp  DebugGraphicLayer.hh  FixedLightToolBox.cpp  FixedLightToolBox.hh  ImGuiHelper.cpp  ImGuiHelper.hh  IncludeUtils.hh  KeyboardAndMouseState.hh  MeshLoader.cpp  MeshLoader.hh  ParticipatingMedium.hh  ParticleField.cpp  ParticleField.hh  ProjectLoader.cpp  ProjectLoader.hh  Quad.cpp  Quad.hh  RenderList.cpp  RenderList.hh  Server.cpp  Server.hh  ShaderHelper.cpp  ShaderHelper.hh  ShaderLoader.cpp  ShaderLoader.hh  ShaderMinifier.cpp  ShaderMinifier.hh  ShaderUniformNames.hh  SimpleSkyGradient.cpp  SimpleSkyGradient.hh  TextureHelper.cpp  TextureHelper.hh  TextureLoader.cpp  TextureLoader.hh  (+2 more)
H/src/unittests/: Algorithm.cpp  Matrix4.cpp  Quaternion.cpp  StringUtils.cpp  TestReporterVisualStudio.cpp  TestReporterVisualStudio.hh  Vector2.cpp  Vector3.cpp  Vector4.cpp  main.cpp
(+1084 files in other folders)
